2017-02-21 Robert Wolff <robert.wolff@cern.ch>
	* Add mc_isAFII (for fast simulation samples true)
	* add latest TDP to setupRC script
	* add possibility to run submission script from everywhere
	* add automatic priority 1 samples from x-section files for Sys jobs
	* move (other) signal samples from bkg x-sec file to sig x-sec file
	* fix correct diboson samples in MC_PostICHEP.py

2017-02-20 Harish Potti <harish.potti@cern.ch>
	* Add Xsec for Sherpa 2.2.1 Diboson and low mass Z+Jets

2017-02-20 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Implement TrigGlobalEfficiencyCorrectionTool for 2LSS, 3L and 4L (SLT||DLT), nominal only
	* Clean-up Decoration of old PromptLeptonIso

2017-02-17 Robert Wolff <robert.wolff@cern.ch>
	* remove AntiKt4PV0TrackJets
	* add new ilumicalc and GRL for 2016 data
	* add DLT matching for lepton pairs with pt threshold for mumu trigger
	* add transverse mass Met+remainging lep for 3l with Z candidates
	* fix protection for sherpa21 shower samples for running on grid
	* add new diboson cross-sections and k-factors in TopDataPreparation

2017-02-15 Robert Wolff <robert.wolff@cern.ch>
	* update to AnalysisTop 2.4.27
	* add 60% and 85% b-tagging WP to 2015 data config
	* update submission script for Sys splitting

2017-02-13 Harish Potti <harish.potti@utexas.edu>
	* add addXsec.py
	* add README in util/
	* update Xsections

2017-02-02 Robert Wolff <robert.wolff@cern.ch>
	* add nleptonplustau selection for 1l+1tau channel in systematic trees

2017-01-31 Rohin Narayan <narayan@cern.ch>
	* adding lead_jetE  and sublead_jetE flat branches
	* Adding truth jets
	* Adding updated Texas MVA

2017-01-27 Robert Wolff <robert.wolff@cern.ch>
	* add ChargeIDSelectorTool output to flat lepton branches
	* Add PromptLepton* variables to flat lepton branches
	* uncomment obsolete Madgraph and Pythia V+jets samples

2017-01-26 Robert Wolff <robert.wolff@cern.ch>
	* use AnalysisTop 2.4.25

2017-01-19 Marco Milesi <marco.milesi@cern.ch>